--- a/src/tree/features/settings/settings.less
+++ b/src/tree/features/settings/settings.less
@@ -38,6 +38,7 @@
     .setting-head {
         margin-bottom: 10px;
         font-size: 13px;
+        color: white;
     }
 
     .setting-item-btn {
@@ -49,7 +50,7 @@
     .settings-item {
         margin-top: 10px;
 
-        button {
+        .setting-item-btn {
             color: var(--main-font-color);
             background-color: transparent;
             transition: none;
@@ -65,7 +66,8 @@
         background-color: var(--main-bg-color);
 
         .ant-modal-title {
-            color: var(--main-font-color);
+            //color: var(--main-font-color);
+            color: white;
         }
     }
 
