[feature] dark/light mode

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -37,13 +37,20 @@
     --search-input-font-color: var(--main-font-color);
     // button-group
     --button-group-bg-color: #33373d;
+    --button-group-hover-color: var(--title-color);
     --button-group-hover-bg-color: #2a2a2a;
     --button-group-shadow-color: #565555;
     --button-group-icon-color: #bababa;
     --button-group-splitter-color: #4f4f4f;
     // setting
     --setting-btn-bg-color: transparent;
+    --setting-btn-font-color: var(--main-font-color);
     --setting-btn-hover-bg-color: #33373d;
     --setting-btn-icon-color: var(--main-font-color);
     --setting-btn-border-color: var(--main-border-color);
+    --ctx-menu-bg-color: #343134;
+    --ctx-menu-font-color: white;
+    --ctx-menu-hover-bg-color: #4e525b;
+    --scrollbar-bgc: rgb(56 56 56 / 50%);
+    --scrollbar-border: #3d3d3d;
 }
