--- a/src/tree/features/feedback/feedback.less
+++ b/src/tree/features/feedback/feedback.less
@@ -1,8 +1,9 @@
 .feedback {
     .feedback-btn {
         color: var(--main-font-color);
+        background-color: transparent;
         //text-decoration: none;
         //border: 1px solid #a4a4a4;
-        background-color: transparent;
+        border-color: var(--main-border-color);
     }
 }
