--- a/src/tree/features/locate/locate.less
+++ b/src/tree/features/locate/locate.less
@@ -20,6 +20,7 @@
         }
 
         &:hover {
+            color: var(--main-font-color);
             background-color: var(--setting-btn-hover-bg-color);
         }
     }
