--- a/src/tree/features/settings/settings.less
+++ b/src/tree/features/settings/settings.less
@@ -21,6 +21,7 @@
         }
 
         &:hover {
+            color: var(--setting-btn-font-color);
             background-color: var(--setting-btn-hover-bg-color);
         }
     }
@@ -38,7 +39,7 @@
     .setting-head {
         margin-bottom: 10px;
         font-size: 13px;
-        color: white;
+        color: var(--main-font-color);
     }
 
     .setting-item-btn {
@@ -66,8 +67,7 @@
         background-color: var(--main-bg-color);
 
         .ant-modal-title {
-            //color: var(--main-font-color);
-            color: white;
+            color: var(--main-font-color);
         }
     }
 
