[feature] add dark/light mode selection in settings

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -1,4 +1,4 @@
-:root[theme='dark-mode'] {
+:root[theme='dark'] {
     --main-font-color: #c6c7cc;
     --main-border-color: #3f3f3f;
     --expander-color: #8d8e9a;
@@ -43,11 +43,11 @@
     --button-group-icon-color: #bababa;
     --button-group-splitter-color: #4f4f4f;
     // setting
-    --setting-btn-bg-color: transparent;
-    --setting-btn-font-color: var(--main-font-color);
-    --setting-btn-hover-bg-color: #33373d;
-    --setting-btn-icon-color: var(--main-font-color);
-    --setting-btn-border-color: var(--main-border-color);
+    --btn-bg-color: transparent;
+    --btn-font-color: var(--main-font-color);
+    --btn-hover-bg-color: #33373d;
+    --btn-icon-color: var(--main-font-color);
+    --btn-border-color: var(--main-border-color);
     --ctx-menu-bg-color: #343134;
     --ctx-menu-font-color: white;
     --ctx-menu-hover-bg-color: #4e525b;
