--- a/src/tree/features/locate/locate.less
+++ b/src/tree/features/locate/locate.less
@@ -7,13 +7,13 @@
         padding: 0;
         margin-right: 15px;
         line-height: 30px;
-        color: var(--setting-btn-icon-color);
+        color: var(--btn-icon-color);
         //vertical-align: center;
         text-align: center;
         //border-radius: 4px;
         cursor: pointer;
-        background-color: var(--setting-btn-bg-color);
-        border: 1px solid var(--setting-btn-border-color);
+        background-color: var(--btn-bg-color);
+        border: 1px solid var(--btn-border-color);
 
         &:focus-visible {
             outline: 0;
@@ -21,7 +21,7 @@
 
         &:hover {
             color: var(--main-font-color);
-            background-color: var(--setting-btn-hover-bg-color);
+            background-color: var(--btn-hover-bg-color);
         }
     }
 }
