--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -25,6 +25,40 @@ body {
     border-bottom: 1px solid #d9d9d9;
 }
 
-button:focus-visible {
-    outline: 0;
+html {
+    button.ant-btn {
+        font-size: 12px;
+        color: var(--btn-icon-color);
+        background-color: var(--btn-bg-color);
+        border: 1px solid var(--btn-border-color);
+        box-shadow: none;
+
+        &:focus-visible {
+            outline: 0;
+        }
+
+        &:hover {
+            color: var(--main-font-color);
+            //background-color: var(--btn-hover-bg-color);
+        }
+    }
+}
+
+.ant-modal {
+    .ant-modal-header {
+        background-color: var(--main-bg-color);
+
+        .ant-modal-title {
+            color: var(--main-font-color);
+        }
+    }
+
+    .ant-modal-content {
+        color: var(--main-font-color);
+        background-color: var(--main-bg-color);
+
+        .ant-modal-close-x {
+            color: var(--main-font-color);
+        }
+    }
 }
