--- a/src/styles/light-mode.less
+++ b/src/styles/light-mode.less
@@ -1,4 +1,4 @@
-:root {
+:root[theme='light'] {
     --main-font-color: rgb(6 6 7);
     --main-border-color: #d9d9d9;
     --expander-color: #8d8e9a;
@@ -43,11 +43,11 @@
     --button-group-icon-color: var(--main-font-color);
     --button-group-splitter-color: #c0c0c0;
     // setting
-    --setting-btn-bg-color: transparent;
-    --setting-btn-hover-bg-color: var(--main-border-color);
-    --setting-btn-font-color: black;
-    --setting-btn-icon-color: black;
-    --setting-btn-border-color: var(--main-border-color);
+    --btn-bg-color: transparent;
+    --btn-hover-bg-color: var(--main-border-color);
+    --btn-font-color: black;
+    --btn-icon-color: black;
+    --btn-border-color: var(--main-border-color);
     --ctx-menu-bg-color: white;
     --ctx-menu-font-color: black;
     --ctx-menu-hover-bg-color: var(--primary-color);
