--- a/src/tree/features/settings/settings.less
+++ b/src/tree/features/settings/settings.less
@@ -8,21 +8,21 @@
         padding: 0;
         margin-right: 15px;
         line-height: 30px;
-        color: var(--setting-btn-icon-color);
+        color: var(--btn-icon-color);
         //vertical-align: center;
         text-align: center;
         //border-radius: 4px;
         cursor: pointer;
-        background-color: var(--setting-btn-bg-color);
-        border: 1px solid var(--setting-btn-border-color);
+        background-color: var(--btn-bg-color);
+        border: 1px solid var(--btn-border-color);
 
         &:focus-visible {
             outline: 0;
         }
 
         &:hover {
-            color: var(--setting-btn-font-color);
-            background-color: var(--setting-btn-hover-bg-color);
+            color: var(--btn-font-color);
+            background-color: var(--btn-hover-bg-color);
         }
     }
 }
@@ -33,6 +33,7 @@
 
         .settings-item-desc {
             margin-right: 10px;
+            font-size: 13px;
         }
     }
 
@@ -51,32 +52,15 @@
     .settings-item {
         margin-top: 10px;
 
-        .setting-item-btn {
-            color: var(--main-font-color);
-            background-color: transparent;
-            transition: none;
-
-            &:hover {
-                color: white;
-                border-color: white;
-            }
-        }
-    }
-
-    .ant-modal-header {
-        background-color: var(--main-bg-color);
-
-        .ant-modal-title {
-            color: var(--main-font-color);
-        }
-    }
-
-    .ant-modal-content {
-        color: var(--main-font-color);
-        background-color: var(--main-bg-color);
-
-        .ant-modal-close-x {
-            color: var(--main-font-color);
-        }
+        //.setting-item-btn {
+        //    //color: var(--main-font-color);
+        //    //background-color: transparent;
+        //    //transition: none;
+        //
+        //    &:hover {
+        //        //color: white;
+        //        //border-color: white;
+        //    }
+        //}
     }
 }
