[feature] add shortcut & shortcut tip btn

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -62,3 +62,13 @@ html {
         }
     }
 }
+
+.ant-float-btn {
+    .ant-float-btn-body {
+        background-color: var(--main-bg-color);
+
+        .iconfont {
+            color: var(--main-font-color);
+        }
+    }
+}
