[style] remove down-arrow for shortcut popup

--- a/src/tree/features/help/help.less
+++ b/src/tree/features/help/help.less
@@ -25,6 +25,12 @@
     }
 }
 
+.help-popover {
+    .ant-popover-arrow {
+        display: none;
+    }
+}
+
 .shortcuts-doc {
     .shortcuts-doc-section {
         margin-bottom: 10px;
