[style] adapte theme select to theme

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -53,4 +53,9 @@
     --ctx-menu-hover-bg-color: #4e525b;
     --scrollbar-bgc: rgb(56 56 56 / 50%);
     --scrollbar-border: #3d3d3d;
+    --select-bg-color: #33373d;
+    --select-font-color: white;
+    --select-hover-bg-color: #4e525b;
+    --select-selection-item-color: #b6b6b6;
+    --select-selected-item-bg-color: #646a75;
 }
