--- a/src/styles/light-mode.less
+++ b/src/styles/light-mode.less
@@ -53,4 +53,9 @@
     --ctx-menu-hover-bg-color: var(--primary-color);
     --scrollbar-bgc: rgb(56 56 56 / 30%);
     --scrollbar-border: transparent;
+    --select-bg-color: var(--main-bg-color);
+    --select-font-color: var(--main-font-color);
+    --select-hover-bg-color: #e9edef;
+    --select-selection-item-color: #7c7c7c;
+    --select-selected-item-bg-color: #e4e8ea;
 }
