[style] fix ui wrap in the edge browser

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -1,3 +1,7 @@
+@import url('./iconfont/iconfont.css');
+@import url('./dark-mode.less');
+@import url('./light-mode.less');
+
 html {
     button.ant-btn {
         font-size: 12px;
