--- a/src/styles/light-mode.less
+++ b/src/styles/light-mode.less
@@ -25,8 +25,8 @@
     --footer-border-top-color: #1f2022;
     --content-bg-color: var(--main-bg-color);
     --title-hover-bg-color: #e4e8ea;
-    --icon-bg-color: transparent;
-    --icon-border-color: transparent;
+    --icon-bg-color: #e4e4e4;
+    --icon-border-color: #e4e4e4;
     // search input
     --search-input-bg-color: rgb(227 229 232);
     --search-input-border-color: #d9d9d9;
