[feature] show opening tabs count in badge

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -3,7 +3,7 @@
     --main-border-color: #3f3f3f;
     --expander-color: #8d8e9a;
     --indent-line-color: #3e3e3e;
-    --main-bg-color: rgb(43 45 49); // 主背景颜色
+    --main-bg-color: #2b2d31; // 主背景颜色
     --primary-color: #fcc304;
     //--main-bg-color: #18191b;  // 主背景颜色
     --second-bg-color: #1f2022; // 辅背景颜色
