[feature] separate node/subtree operation for close/delete in context-menu

--- a/src/styles/iconfont/iconfont.css
+++ b/src/styles/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'iconfont'; /* Project id 3889192 */
-    src: url('iconfont.woff2?t=1679639876405') format('woff2'),
-        url('iconfont.woff?t=1679639876405') format('woff'),
-        url('iconfont.ttf?t=1679639876405') format('truetype');
+    src: url('iconfont.woff2?t=1680423893335') format('woff2'),
+        url('iconfont.woff?t=1680423893335') format('woff'),
+        url('iconfont.ttf?t=1680423893335') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-pointer:before {
+    content: '\e934';
+}
+
+.icon-node-multiple:before {
+    content: '\e8ad';
+}
+
+.icon-layergroup-fill:before {
+    content: '\e7b5';
 }
 
 .icon-keyboard:before {
