[optimize] i18n for tooltip at operation bar items

--- a/src/styles/light-mode.less
+++ b/src/styles/light-mode.less
@@ -45,8 +45,8 @@
     // setting
     --btn-bg-color: transparent;
     --btn-hover-bg-color: var(--main-border-color);
-    --btn-font-color: black;
-    --btn-icon-color: black;
+    --btn-font-color: #545454;
+    --btn-icon-color: #545454;
     --btn-border-color: var(--main-border-color);
     --ctx-menu-bg-color: white;
     --ctx-menu-font-color: black;
