--- a/src/tree/features/operation-bar/operation-bar.less
+++ b/src/tree/features/operation-bar/operation-bar.less
@@ -1,7 +1,7 @@
 .operation-bar {
     display: flex;
     padding: 5px;
-    border-bottom: 1px solid #414141;
+    border-bottom: 1px solid var(--header-border-bottom-color);
 
     .operation-bar-item {
         width: 18px;
