[feature] shortcut: add shortcut for expand/collapse all, open/active node

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -4,7 +4,7 @@
     --expander-color: #8d8e9a;
     --indent-line-color: #3e3e3e;
     --main-bg-color: #2b2d31; // 主背景颜色
-    --primary-color: #fcc304;
+    --primary-color: #d2a400;
     //--main-bg-color: #18191b;  // 主背景颜色
     --second-bg-color: #1f2022; // 辅背景颜色
     --title-color: var(--main-font-color);
