--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -320,7 +320,7 @@ body {
 
 .tab-active-style {
     .fancytree-title {
-        font-weight: bold;
+        //font-weight: bold;
         color: var(--title-tab-active-color) !important;
     }
 
