[feature] make auto autoScrollToActiveTab,createNewTabByLevel as options

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -49,6 +49,7 @@
     --btn-icon-color: var(--main-font-color);
     --btn-border-color: var(--main-border-color);
     --ctx-menu-bg-color: #343134;
+    --ctx-menu-border-color: #4b4b4b;
     --ctx-menu-font-color: white;
     --ctx-menu-hover-bg-color: #4e525b;
     --scrollbar-bgc: rgb(56 56 56 / 50%);
