--- a/src/styles/light-mode.less
+++ b/src/styles/light-mode.less
@@ -49,6 +49,7 @@
     --btn-icon-color: #545454;
     --btn-border-color: var(--main-border-color);
     --ctx-menu-bg-color: white;
+    --ctx-menu-border-color: #d9d9d9;
     --ctx-menu-font-color: black;
     --ctx-menu-hover-bg-color: var(--primary-color);
     --scrollbar-bgc: rgb(56 56 56 / 30%);
