--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -429,8 +429,7 @@ body {
 .context-menu-list {
     padding: 8px 4px;
     background-color: var(--ctx-menu-bg-color);
-    //border-color: #4e525b;
-    border-color: transparent;
+    border-color: var(--ctx-menu-border-color);
     border-radius: 8px;
     box-shadow: 0 1px #0000000d, 0 4px 10px rgb(0 0 0 / 30%);
 
